# RobotHead

./: .gitignore  .project  Camera_Test.py  FaceTrack.cpp  LICENSE  README.md  ServoControl.js  index.html  rightEyebrowPosition.py  speak.py  start.sh  tracker.cpp
AudioModule/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  CMakeListsOld.txt
Base_UI/: Base_UI.pro  mainwindow.ui
Blob Detection/: README.md  ServoControl.js  ServoControl_withEyebrow.js  hsv.txt
FaceDetection/: FaceDetect.py  README.md
Speech/: speak.py
old_referenceCode/: leftEyebrowPosition.py  neckPitchPosition.py  neckYawPosition.py
old_referenceCode/Blob Detection/: LICENSE  tracker.cpp
old_referenceCode/FaceDetection/: input.py
old_referenceCode/Speech/: speak.py
recognitionTest/: main.py
src/: BlobDetection.cpp  BlobDetection.h  CMakeLists.txt  FaceDetection.cpp  FaceDetection.h  rc_test_servos.c  roboCore  roboCore.cpp  servos.cpp  servos.h
src/cmake/: FindAudioModule.cmake  FindPocketSphinx.cmake
src/faceDatabase/: FaceDatabase01.xml
